# cmake_playground

./: MoreModernCMake.txt  Readme.md  hello.cmake
IGenericDataProvider/: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
IGenericDataProvider/include/IGenericDataProvider/: if_generic_data_provider.h
helloCMake/Foo/: CMakeLists.txt
helloCMake/Foo/cmake/: FooConfig.cmake
helloCMake/Foo/src/: Foo.cpp
